--- a/css/rtl/bootstrap.css
+++ b/css/rtl/bootstrap.css
@@ -3,7 +3,7 @@
  * Copyright 2013 Twitter, Inc.
  * Licensed under http://www.apache.org/licenses/LICENSE-2.0
  */
-/*! Bootstap-rtl v3.0.3.1 by mehral.com */
+/*! Bootstrap-rtl v3.0.3.1 by mehral.com */
 /*! normalize.css v2.1.3 | MIT License | git.io/normalize */
 article,
 aside,
